# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  gorn_game_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: Makefile  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
gornalas_brain_games.egg-info/: PKG-INFO  SOURCES.txt
