[tool.poetry]
name = "Gornalas_brain_games"
version = "0.1.9"
description = ""
authors = ["Alex_Gorn"]
packages = [{ include = "brain_games" },]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
